--- a/recipes.html
+++ b/recipes.html
@@ -92,6 +92,8 @@
                 </script>
         </head>
         <section style="background: linear-gradient(#63616b, #f9f9f9 50%, #f9f9f9);">
+        </section>
+        <section style="transformY(10rem)">
             <section class="card card1">
                 <section class="card-content">
                     <h2 class="card-title">Singapore Crab</h2>
@@ -102,24 +104,24 @@
                     <span class="link"></span>
                 </a>
             </section>
-        </section>
-        <section class="card card2">
-            <section class="card-content">
-                <h2 class="card-title">Crab Uramaki</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">Uramaki Sushi with Chilli Crab makes one of the best sushi rolls around. Tasy, easy to make, and looks impressive.</p>
+            <section class="card card2">
+                <section class="card-content">
+                    <h2 class="card-title">Crab Uramaki</h2>
+                    <p class="card-body" style="width: 80%; font-weight: bold;">Uramaki Sushi with Chilli Crab makes one of the best sushi rolls around. Tasy, easy to make, and looks impressive.</p>
+                </section>
+                <a href="instructions-sushi.html">
+                    <span class="link"></span>
+                </a>
             </section>
-            <a href="instructions-sushi.html">
-                <span class="link"></span>
-            </a>
-        </section>
-        <section class="card card3">
-            <section class="card-content">
-                <h2 class="card-title">Avocado Crab Boats</h2>
-                <p class="card-body" style="width: 80%; font-weight: bold;">These boats are wonderful with tortilla chips, beans or rice. You can also cover them, pack them on ice, and take them to a picnic or potluck. Straight from the oven or cold, they're always delicious</p>
+            <section class="card card3">
+                <section class="card-content">
+                    <h2 class="card-title">Avocado Crab Boats</h2>
+                    <p class="card-body" style="width: 80%; font-weight: bold;">These boats are wonderful with tortilla chips, beans or rice. You can also cover them, pack them on ice, and take them to a picnic or potluck. Straight from the oven or cold, they're always delicious</p>
+                </section>
+                <a href="instructions-avocadocrabboats.html">
+                    <span class="link"></span>
+                </a>
             </section>
-            <a href="instructions-avocadocrabboats.html">
-                <span class="link"></span>
-            </a>
         </section>
          <!--FOOTER-->
          <section class="footer" style="background: linear-gradient(#f9f9f9, #63616b);transform: translateY(165rem);">
