--- a/recipes.html
+++ b/recipes.html
@@ -255,7 +255,7 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10rem;
+    margin-top: 0;
     margin-bottom: 5rem;
 }
 .card1{
