--- a/recipes.html
+++ b/recipes.html
@@ -91,7 +91,7 @@
                         });
                 </script>
         </head>
-        <section style="height: 10rem; background: linear-gradient(#63616b, #f9f9f9 50%, #f9f9f9);">
+        <section style="height: 20rem; background: linear-gradient(#63616b, #f9f9f9);">
         </section>
         <section style="transformY(10rem)">
             <section class="card card1">
