--- a/recipes.html
+++ b/recipes.html
@@ -91,7 +91,7 @@
                         });
                 </script>
         </head>
-        <section style="height: 20rem; background: linear-gradient(#63616b, #f9f9f9);">
+        <section style="height: 20rem; background: linear-gradient(#2b2927, #f9f9f9);">
         </section>
         <section style="transformY(20rem)">
             <section class="card card1">
@@ -124,7 +124,7 @@
             </section>
         </section>
          <!--FOOTER-->
-         <section class="footer" style="background: linear-gradient(#f9f9f9, #63616b);transform: translateY(165rem);">
+         <section class="footer" style="background: linear-gradient(#f9f9f9, #2b2927);transform: translateY(165rem);">
             <section class="footer-container">
                 <section class="footer-container-text" >
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(-0.6rem);">
