--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         }
                         logo.style.animation = `fill 1s ease forwards ${delay}s`;
                     }
-                    animateSgv('logo', 1, 0.1)
+                    animateSgv('logo', 0, 0.1)
                 }, false);
                 </script>                    
             </section>
@@ -179,6 +179,7 @@ background-image: url(media/briksdaltop.png);
 background-size: cover;
 background-position: bottom;
 background-repeat:no-repeat;
+background-attachment: fixed;
 }
 .title {
     position: absolute;
