--- a/sustainability.html
+++ b/sustainability.html
@@ -27,7 +27,6 @@
                         <a href="products.html">PRODUCTS</a>
                         <a href="team.html">OUR TEAM</a>
                         <a href="recipes.html">RECIPES</a>
-                       
                         <a href="sustainability.html">SUSTAINABILITY</a>
                     </nav>
                 </section>
@@ -184,13 +183,16 @@
 </html>
 
 <style>
+    body{
+        background-image: url(media/Sustainability.png);
+        background-size: cover;
+        background-position: top;
+        background-repeat:no-repeat;
+        background-attachment: fixed;
+    }
     .background-sustainability{
     height: 125vh;
-    background-image: url(media/Sustainability.png);
-    background-size: cover;
     position: static;
-    background-position: top;
-    background-repeat:no-repeat;
 }
 .title {
     position: absolute;
@@ -293,7 +295,7 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    background: rgba(24, 151, 204, 0.4);
+    background-color: transparent; 
     height: 270rem;
     z-index: -224;
 }
