--- a/team.html
+++ b/team.html
@@ -93,7 +93,7 @@
         <!--ABOUT JAN ROAR-->
         <section class="about">
             <div style="font-size: 1.5rem; text-align: justify; text-align-last: center; margin:auto; width: 60%; margin-top: 0; position: relative; top: 2rem;">
-                <p>Born and raised on the Norwegian island Karmøy, Jan Roar has always been close to the sea. Ever since childhood he took a particular interest for crabs. After spending the early days of his education and career as a mechanic, Jan Roar started designing and devloping machinery for the industrial production of crab - something he has now been doing for 33 years. Jan Roar is the inventor of all of MS-Solutions’ crab handling technologies and is thereby the most essential member of our team. .</p>
+                <p>Born and raised on the Norwegian island Karmøy, Jan Roar has always been close to the sea. Ever since childhood he took a particular interest for crabs. After spending the early days of his education and career as a mechanic, Jan Roar started designing and devloping machinery for the industrial production of crab - something he has now been doing for 33 years. Jan Roar is the inventor of all of Decapod's crab handling technologies and is thereby the most essential member of our team. .</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta tempore dolor debitis at provident sed ipsa recusandae quos minima itaque harum animi, numquam exercitationem. Magnam repellat beatae modi dignissimos quam quia illum voluptas quis perspiciatis facere nihil vitae dicta praesentium fugiat eligendi sapiente magni tempore dolorem ut, ex qui accusantium tempora repellendus possimus. Nam fuga laborum recusandae accusamus magni!</p>
                 <p style="font-weight: bold;">jan.storesund@decapod.no</p>
             </div>
@@ -112,8 +112,8 @@
             </div>
             <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: center; font-size: 1.5rem; font-weight: bold; margin-top: 0; margin-bottom: 0;">
                 <a style=" text-decoration: none; color: black;" href="mailto:kjell@kstenersen.com">Kjell@kstenersen.com</a>
-                <a style=" text-decoration: none; color: black;" href="mailto:egil.melkevik@ms-solutions.no">Egil.Melkevik@MS-Solutions.no</a>
-                <a style=" text-decoration: none; color: black;" href="mailto:folke.hermansen@ms-solutions.no">Folke.Hermansen@MS-Solitions.no</a>
+                <a style=" text-decoration: none; color: black;" href="mailto:egil.melkevik@decapod.no">Egil.Melkevik@decapod.no</a>
+                <a style=" text-decoration: none; color: black;" href="mailto:folke.hermansen@decapod.no">Folke.Hermansen@decapod.no</a>
             </div>
             <div style="display: grid; grid-template-columns: repeat(3, 1fr);gap: 0% 5%; margin: 8%; text-align: justify; font-size: 1.5rem; margin-top: 0; margin-bottom: 0;">
                 <p>Kjell is educated as a state authorized accountant with a degree from the Norwegian School of Economics. He has over 30 years' experience in corporate finance as a business risk manager, consultant, M&A manager, and has notably spent 10 years as partner at EY. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos quam magni adipisci tenetur laudantium facilis excepturi laboriosam quo sit modi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perferendis et quasi sunt laborum magnam nisi aliquid autem dolorem sapiente! lorem20</p>
@@ -136,7 +136,7 @@
                         <div>
                             <a style="margin-bottom: 0;font-family: bree, sans-serif; font-size: 1.2rem;text-decoration: none; color: black" href="https://www.google.com/maps/search/Staum%C3%B8yvegen+28B,+5544+V%C3%A5lev%C3%A5g/@59.6983696,5.4654076,15z/data=!3m1!4b1">Staumøyvegen 28B, 5544 Vålevåg</a><br>
                             <a href="tel:+47 90770976" style="font-family: bree, sans-serif; font-size: 1.2rem;text-decoration: none; color: black;margin-top: 0; margin-bottom: 0;">Phone: (+47) 90770976</h3><br>
-                            <a style="font-family: bree, sans-serif; font-size: 1.2rem; margin-top: 0;text-decoration: none; color: black;" href="mailto:inquiries@ms-solutions.no">Email: Inquiries@ms-solutions.no</a>
+                            <a style="font-family: bree, sans-serif; font-size: 1.2rem; margin-top: 0;text-decoration: none; color: black;" href="mailto:inquiries@decapod.no">Email: Inquiries@decapod.no</a>
                         </div>
                     </div>
                     <div style="display:flex; align-items: center; justify-content: center; transform: translateY(0rem);">
