--- a/instructions-singaporecrab.html
+++ b/instructions-singaporecrab.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/wqn4imc.css">
     <link rel="icon" type="img/png" href="media/logo.svg">
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css"> 
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <body>
         <!--HEAD-->
         <head class="head">
@@ -56,7 +56,7 @@
                 </div>
             </section>
             <section class="title" style="margin-top: 5rem; margin-bottom: 0;">
-                <h1 style="text-align: center; margin-bottom: 0;">Spicy Singapore Style Crab</h1>
+                <h1 class="title-title" style="text-align: center; margin-bottom: 0;">Spicy Singapore Style Crab</h1>
             </section>
             <section class="slideshow-container">
                 <!-- Full-width images with number and caption text -->
@@ -97,28 +97,31 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
                 <span class="dot" onclick="currentSlide(4)"></span>
               </div>
+              <div class="print">
+                <button onclick="window.print()"></button>
+              </div>
             </section>
             <section class="text-container">
                 <section class="text">
                     <h2 style="text-align: center; color: black;">Do This</h2>
-                        <h2 style="text-align: center; color: black;">Ingredients</h2>
-                        <ul style="list-style-type: none; list-style-position: inside; padding-left: 0; color:black;";> 
-                            <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
-                            <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
-                            <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
-                        </ul>
-                        <ul style="color:black; text-align:left;">
-                            <li>2 whole cooked Decapod Crabs</li>
-                            <li>2 tbsp flavourless oil</li>
-                            <li>3 Garlic cloves, very finely chopped</li>
-                            <li>Thumb sized piece of giner, finely chopped</li>
-                            <li>3 red chillies</li>
-                            <li>4 tbsp tomato ketchup</li>
-                            <li>2 tbsp soy sauce</li>
-                            <li>Handfull coriander leaves, roughly chopped</li>
-                            <li>2 spring onions</li>
-                            <li>Rice or steamed bad buns to serve</li>
-                        </ul>
+                    <h2 style="text-align: center; color: black;">Ingredients</h2>
+                    <ul style="list-style-type: none; list-style-position: inside; padding-left: 0; color:black;";> 
+                      <li style="margin-bottom: 1rem;">The crab must be prepared before stir-frying (you can ask your fishmonger to do this). This involves removing the claws, the main shell, discarding the dead man’s fingers, then cutting the body into four pieces, and cracking the claws and the legs so the sauce can get through to the meat.</li>
+                      <li style="margin-bottom: 1rem;">Heat the oil in a large wok and sizzle the garlic, ginger and chopped chillies for 1 min or until fragrant. Add the ketchup, soy and 100ml water, and stir to combine. Throw in the crab, turn up the heat and stir-fry for 3-5 mins or until the crab is piping hot and coated in the sauce. Stir through most of the coriander, spring onions and sliced chilli.</li>
+                      <li>Use tongs to arrange the crab on a serving dish, pour over the sauce from the pan and scatter over the remaining coriander, spring onions and sliced chilli. Serve with rice or bao buns, and a lot of napkins.</li>
+                    </ul>
+                    <ul style="color:black; text-align:left;">
+                      <li>2 whole cooked Decapod Crabs</li>
+                      <li>2 tbsp flavourless oil</li>
+                      <li>3 Garlic cloves, very finely chopped</li>
+                      <li>Thumb sized piece of giner, finely chopped</li>
+                      <li>3 red chillies</li>
+                      <li>4 tbsp tomato ketchup</li>
+                      <li>2 tbsp soy sauce</li>
+                      <li>Handfull coriander leaves, roughly chopped</li>
+                      <li>2 spring onions</li>
+                      <li>Rice or steamed bad buns to serve</li>
+                    </ul>
                 </section>
             </section>
         </head>
@@ -152,21 +155,21 @@
 </html>
 
 <style>
-ul {
+  ul {
     font-family: bree, sans-serif;
     font-size: 1.2rem;
     font-weight: 300;
     font-style: none;
-}
-
-.text-container{
-    width: 54%;
+  }
+  .text-container{
+    width: 53%;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     top: 35rem;
-}
-.text{
+    transform: translatex(-0.75rem);
+  }
+  .text{
     position: relative;
     margin-left:auto;
     margin-right: auto;
@@ -177,106 +180,148 @@ ul {
     grid-template-areas: 
         ". ."
         ". .";
-}
-/* Slideshow container */
-.background-instructions{
+  }
+  /* Slideshow container */
+  .background-instructions{
     background-color: #f9f9f9
-}
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
+  }
+  .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+  }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
 
-.active, .dot:hover {
-  background-color: #717171;
-}
+  .active, .dot:hover {
+    background-color: #717171;
+  }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  .print{
+    position: relative;
+    top: -2rem;
+    float: right;
+    background-image: url(media/printer.png);
+    background-repeat: none;
+    background-size: cover;
+    height: 2.5rem;
+    width: 2.5rem;
+    z-index: 1;
+  }
+  button{
+    height: 2.5rem;
+    width: 2.5rem;
+    background: transparent;
+    border: none;
+  }
+  button:hover{
+    cursor: pointer;
+  }
+  @media print{
+    body{
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+    }
+    .title{
+      white-space: nowrap;
+      position: relative;
+      top: 0;
+    }
+    .title-title{
+      font-size: 3rem;
+    }
+    .dot, .print, .numbertext, .prev, .next, .head, .footer, .slideshow-container, .logo-container{
+      display: none;
+    }
+    .text-container{
+      width: 100%;
+      transform: translateY(5rem);
+    }
+  }
 </style>
 
 <script>
-window.print()
 
     var slideIndex = 1;
 showSlides(slideIndex);
