--- a/instructions-singaporecrab.html
+++ b/instructions-singaporecrab.html
@@ -319,6 +319,20 @@
       transform: translateY(5rem);
     }
   }
+  nav a:after{
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 1.6px;
+    width: 0;
+    left: 0;
+    bottom: 5px;
+    transition: 0.3s;
+}
+nav a:hover{
+    color: black;
+    transform: translate(-3px, 1px);
+}
 </style>
 
 <script>
