--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <section class="about-text">
             <div class="about-text-body">
                 <h4 class="about-text-body-1">Unmatched Taste</h4>
-                <p class="about-text-body-2">Our crab hotel allows for a carefully monitored environment and feed cycle.</p>
+                <p class="about-text-body-2">Our Crab hotel allows for a carefully monitored environment and feed cycle.</p>
                 
                 <h4 class="about-text-body-1">Full of Meat</hh4>
                 <p class="about-text-body-2">Our feeding technoligies and methods ensure maximum meat content.</p>
